--- a/zapq/ios/Runner/Info.plist
+++ b/zapq/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	
+	<!-- Camera permission for image picker -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to camera to take photos for business profiles and posts.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photo library to select and save images for business profiles.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs permission to save images to your photo library.</string>
 </dict>
 </plist>
